; ModuleID = '/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_devsett.c_pCDevSettings_AllocAndCopyString.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/cpl/desk/extr_devsett.c_pCDevSettings_AllocAndCopyString.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LMEM_FIXED = common dso_local global i32 0, align 4
@CP_ACP = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32*)* @pCDevSettings_AllocAndCopyString to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @pCDevSettings_AllocAndCopyString(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %5 = load i32*, i32** %2, align 8
  %6 = call i32 @_tcslen(i32* %5)
  %7 = add nsw i32 %6, 1
  store i32 %7, i32* %3, align 4
  %8 = load i32, i32* @LMEM_FIXED, align 4
  %9 = load i32, i32* %3, align 4
  %10 = sext i32 %9 to i64
  %11 = mul i64 %10, 4
  %12 = trunc i64 %11 to i32
  %13 = call i64 @LocalAlloc(i32 %8, i32 %12)
  %14 = inttoptr i64 %13 to i32*
  store i32* %14, i32** %4, align 8
  %15 = load i32*, i32** %4, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %23

17:                                               ; preds = %1
  %18 = load i32, i32* @CP_ACP, align 4
  %19 = load i32*, i32** %2, align 8
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %3, align 4
  %22 = call i32 @MultiByteToWideChar(i32 %18, i32 0, i32* %19, i32 -1, i32* %20, i32 %21)
  br label %23

23:                                               ; preds = %17, %1
  %24 = load i32*, i32** %4, align 8
  ret i32* %24
}

declare dso_local i32 @_tcslen(i32*) #1

declare dso_local i64 @LocalAlloc(i32, i32) #1

declare dso_local i32 @MultiByteToWideChar(i32, i32, i32*, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
